# dict-model

./: .flake8  .isort.cfg  README.md  pyproject.toml  requirements.txt  setup.cfg
dict_model/: __init__.py
tests/: test_dict_model.py  test_dict_model_decorator.py  test_dict_model_field_decorator.py  test_dict_model_object_decorator.py  test_dict_model_objects.py  test_dict_model_queryset.py
