[metadata]
name = dict-model
version = 0.0.1
author = Patrick Schneeweis
author_email = psbleep@protonmail.com
url = https://github.com/digital-business-cards-dotcom/dict-model
description = Django extension for model-like objects not backed by the database.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
license_file = LICENSE
platform = any
keywords = django
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >= 3.8
packages = dict_model
test_suite = tests
setup_requires =
    setuptools >= 40.6.0
install_requires =
    django >= 4.0.8
